[metadata]
name = yolo
version = 0.0.1

[options]
packages = find:
package_dir =
    =yolo
install_requires =
    numpy
    pandas
    matplotlib;
python_requires = 3.9

[options.packages.find]
where = yolo
# include =
# exclude =

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504